--- a/good.html
+++ b/good.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Password Changed Successfully</title>
+<title>Mot de passe changé avec succès</title>
 <style>
     body {
         background-color: beige;
@@ -40,10 +40,10 @@
 <body>
 
 <div class="container">
-    <h2>Password Changed Successfully</h2>
+    <h2>Mot de passe changé avec succès</h2>
     <div class="message">
-        <p>Your password has been changed successfully.</p>
-        <p>You can now close this tab.</p>
+        <p>Votre mot de passe a été changé avec succès.</p>
+        <p>Vous pouvez maintenant fermer cet onglet.</p>
     </div>
 </div>
 
