--- a/passwd.html
+++ b/passwd.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Change Password</title>
+<title>Changer le mot de passe</title>
 <style>
     body {
         background-color: beige;
@@ -60,7 +60,7 @@
         var email = document.getElementById("email").value;
         var newPassword = document.getElementById("newPassword").value;
 
-        // Redirect to another page
+        // Redirection vers une autre page
         window.location.href = "good.html";
     }
 </script>
@@ -68,17 +68,17 @@
 <body>
 
 <div class="container">
-    <h2>Change Password</h2>
+    <h2>Changer le mot de passe</h2>
     <form>
         <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="text" id="email" name="email" placeholder="Enter your email">
+            <label for="email">Email :</label>
+            <input type="text" id="email" name="email" placeholder="Entrez votre email">
         </div>
         <div class="form-group">
-            <label for="newPassword">New Password:</label>
-            <input type="password" id="newPassword" name="newPassword" placeholder="Enter your new password">
+            <label for="newPassword">Nouveau mot de passe :</label>
+            <input type="password" id="newPassword" name="newPassword" placeholder="Entrez votre nouveau mot de passe">
         </div>
-        <input type="button" value="Submit" onclick="submitForm()">
+        <input type="button" value="Soumettre" onclick="submitForm()">
     </form>
 </div>
 
